--- a/index.html
+++ b/index.html
@@ -19,42 +19,45 @@
 		<table class="calculator">
 			<tr>
 				<!-- Output -->
-				<td colspan="3"><input class="display-box" type="text" id="result" disabled/> </td>
-				<!-- clearLast() function will clear the last entered value -->
-				<td class="operand"><input type="button" value="Del" onclick="clearLast()" id="btn" /></td>
+				<div class="output">
+					<div data-previous-operand data-previous-operand class="previous-operand"></div>
+					<div data-current-operand data-current-operand class="current-operand"></div>
+				</div>
+
 			</tr>
 			<tr>
 				<!-- clearScreen() function to clear all values -->
-				<td class="buttonDark alert"><input type="button" value="C" onclick="clearScreen()" id="btn" /></td>
+				<td class="buttonDark alert"><input data-all-clear type="button" value="C"  id="btn" /></td>
 				<!-- display() function to display the value of the clicked button -->
-				<td class="buttonDark operand"><input type="button" value="&#40;&#41;" onclick="display('&#40;&#41;')" /></td>
-				<td class="buttonDark operand"><input type="button" value="%" onclick="display('%')" /></td>
-				<td class="buttonDark operand"><input type="button" value="/" onclick="display('/')" /></td>
+				<!-- <td data-delete class="buttonDark operand"><input type="button" value="&#40;&#41;" onclick="display('&#40;&#41;')" /></td> -->
+				<td class="buttonDark operand"><input data-delete type="button" value="&#8592;" /></td>
+				<td class="buttonDark operand"><input data-percent type="button" value="%" /></td>
+				<td class="buttonDark operand"><input data-operation type="button" value="&#247;" /></td>
 			</tr>
 			<tr>
-				<td class="buttonDark"><input type="button" value="7" onclick="display('7')" /></td>
-				<td class="buttonDark"><input type="button" value="8" onclick="display('8')" /></td>
-				<td class="buttonDark"><input type="button" value="9" onclick="display('9')" /></td>
-				<td class="buttonDark operand"><input type="button" value="*" onclick="display('*')" /></td>
+				<td class="buttonDark"><input data-number type="button" value="7"  /></td>
+				<td class="buttonDark"><input data-number type="button" value="8"  /></td>
+				<td class="buttonDark"><input data-number type="button" value="9"  /></td>
+				<td class="buttonDark operand"><input data-operation type="button" value="*"  /></td>
 			</tr>
 			<tr>
-				<td class="buttonDark"><input type="button" value="4" onclick="display('4')" /></td>
-				<td class="buttonDark"><input type="button" value="5" onclick="display('5')" /></td>
-				<td class="buttonDark"><input type="button" value="6" onclick="display('6')" /></td>
-				<td class="buttonDark operand"><input type="button" value="-" onclick="display('-')" /></td>
+				<td class="buttonDark"><input data-number type="button" value="4"  /></td>
+				<td class="buttonDark"><input data-number type="button" value="5"  /></td>
+				<td class="buttonDark"><input data-number type="button" value="6"  /></td>
+				<td class="buttonDark operand"><input data-operation type="button" value="-"  /></td>
 			</tr>
 			<tr>
-				<td class="buttonDark"><input type="button" value="1" onclick="display('1')" /></td>
-				<td class="buttonDark"><input type="button" value="2" onclick="display('2')" /></td>
-				<td class="buttonDark"><input type="button" value="3" onclick="display('3')" /></td>
-				<td class="buttonDark operand"><input type="button" value="+" onclick="display('+')" /></td>
+				<td class="buttonDark"><input data-number type="button" value="1"  /></td>
+				<td class="buttonDark"><input data-number type="button" value="2"  /></td>
+				<td class="buttonDark"><input data-number type="button" value="3" /></td>
+				<td class="buttonDark operand"><input data-operation type="button" value="+"  /></td>
 			</tr>
 			<tr>
-				<td class="buttonDark"><input type="button" value="+/-" onclick="display('+/-')" /></td>
-				<td class="buttonDark"><input type="button" value="0" onclick="display('0')" /></td>
-				<td class="buttonDark"><input type="button" value="." onclick="display('.')" /></td>
+				<td class="buttonDark"><input data-positive-negative type="button" value="&plusmn;"  /></td>
+				<td class="buttonDark"><input data-number type="button" value="0"  /></td>
+				<td class="buttonDark"><input data-number type="button" value="."  /></td>
 				<!-- calculate() function will evaluate the entered expression -->
-				<td class=" highlight"><input type="button" value="=" onclick="calculate()" id="btn" /></td>
+				<td class=" highlight"><input data-equals type="button" value="="  id="btn" /></td>
 			</tr>
 
 		</table>
